test/errors/types_expr_types1.rcasm
ldi a, "foo" + 1   ; can't mix strings and numbers
ldi a, 1 + "foo"   ; can't mix strings and numbers